--- a/www/student_login.html
+++ b/www/student_login.html
@@ -42,7 +42,7 @@
     }
 
     function getNew() {
-      var url = "http://localhost:54698/GetAll/getstudent";
+      var url = "http://192.168.100.8:45455/GetAll/getstudent";
       $.get(url, function(data, status) {
         var jsonarr = JSON.parse(data);
         for (var i = 0; i < jsonarr.length; i++) {
@@ -79,7 +79,7 @@
           if (results.rows.length > 0) {
             var hname;
             document.getElementById('mname').innerHTML = "Welcome " + results.rows.item(0).name;
-            var url = "http://localhost:54698/GetAll/gettime";
+            var url = "http://192.168.100.8:45455/GetAll/gettime";
             var type;
             var url2;
             if (results.rows.item(0).school == "SITE") {
