--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,9 @@
         }
       });
        });
+    function go() {
+         window.location.href = "admin_login.html";
+       }
   </script>
 
 
@@ -156,7 +159,7 @@
       </ul>
       <div style="margin-top:100px;">
         <a href="student_login.html" class="ui-btn ui-shadow" >Student LogIn</a>
-        <a href="admin_login.html" class="ui-btn ui-shadow" >Admin LogIn</a>
+        <button type="button" class="ui-btn ui-shadow" onclick="go()" name="button">Admin LogIn</button>
       </div>
 
 
