--- a/www/fees.html
+++ b/www/fees.html
@@ -14,6 +14,11 @@
   <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery.mobile-1.4.5.min.js"></script>
+	<script type="text/javascript">
+function go(x) {
+  window.location.href = x;
+}
+</script>
 </head>
 
 <body>
