--- a/www/fees.html
+++ b/www/fees.html
@@ -28,7 +28,7 @@ function go(x) {
 
     <div data-role="header" id="fees_head">
       <h2>Fees</h2>
-      <a href="#left-panel" class="ui-btn ui-shadow ui-corner-all ui-icon-bars ui-btn-icon-notext ui-btn-b ui-btn-inline">Icon only</a>
+      <a href="#f-panel" class="ui-btn ui-shadow ui-corner-all ui-icon-bars ui-btn-icon-notext ui-btn-b ui-btn-inline">Icon only</a>
     </div>
     <div data-role="main" class="ui-content">
 			<h3 style="text-align:center;">The fees payable for each Academic Year are as follows</h3>
@@ -199,14 +199,14 @@ function go(x) {
     </div>
 
    <!--======================== PANEL STUFF ======================-->
-    <div data-role="panel" data-inset="false" id="about-panel" style="background-color:#08295a;" data-theme="b" data-display="overlay">
+    <div data-role="panel" data-inset="false" id="f-panel" style="background-color:#08295a;" data-theme="b" data-display="overlay">
       <ul data-role="listview" data-shadow="false" data-inset="false">
         <li><a onclick="go('index.html')" >Home</a></li>
 
         <li><a onclick="go('news_n_events.html')" >News And Events</a></li>
 
-        <li><a href="#about_pop_1" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-plus" data-rel="popup" data-transition="pop">Undergraduate Programs</a></li>
-        <div data-role="popup" id="about_pop_1">
+        <li><a href="#f_pop_1" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-plus" data-rel="popup" data-transition="pop">Undergraduate Programs</a></li>
+        <div data-role="popup" id="f_pop_1">
           <ul data-role="listview" data-theme="a" data-inset="false" style="min-width:200px;">
             <li data-role="list-divider">Choose a School</li>
             <li><a onclick="go('undergrad_sbmf.html')">SBMF</a></li>
@@ -216,8 +216,8 @@ function go(x) {
           </ul>
         </div><!-- /popup -->
 
-        <li><a href="#about_pop_2" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-plus" data-rel="popup" data-transition="pop">Postgraduate Programmes</a></li>
-        <div data-role="popup" id="about_pop_2">
+        <li><a href="#f_pop_2" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-plus" data-rel="popup" data-transition="pop">Postgraduate Programmes</a></li>
+        <div data-role="popup" id="f_pop_2">
           <ul data-role="listview" data-theme="a" data-inset="false" style="min-width:200px;">
             <li data-role="list-divider">Choose a School</li>
             <li><a onclick="go('postgrad_sbmf.html')">SBMF</a></li>
