--- a/www/panel.html
+++ b/www/panel.html
@@ -1,5 +1,5 @@
 <!--======================== PANEL STUFF ======================-->
-    <div data-role="panel" data-inset="false" id="about-panel" style="background-color:#08295a;" data-theme="b" data-display="overlay">
+    <div data-role="panel" data-inset="false" id="panel" style="background-color:#08295a;" data-theme="b" data-display="overlay">
       <ul data-role="listview" data-shadow="false" data-inset="false">
         <li><a onclick="go('index.html')" >Home</a></li>
 
