--- a/www/index.html
+++ b/www/index.html
@@ -154,6 +154,7 @@
         <li><a onclick="go('research_fields.html')">Research Fields</a></li>
         <li><a onclick="go('fees.html')">Fees</a></li>
         <li><a onclick="go('about_us.html')">About Us</a></li>
+        <li><a onclick="go('weather.html')">About Us</a></li>
 
 
       </ul>
